--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,40 @@
   
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <style>
+      .loading {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border: 4px solid rgb(1, 100, 80, .3);
+        border-radius: 50%;
+        border-top-color: rgba(1, 100, 80, .5);
+        animation: spin 1s ease-in-out infinite;
+        -webkit-animation: spin 1s ease-in-out infinite;
+        position: fixed;
+        top: 50%;
+        left: 43%;
+        z-index: 1;
+      }
+    
+      @keyframes spin {
+        to {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+    
+      @-webkit-keyframes spin {
+        to {
+          -webkit-transform: rotate(360deg);
+        }
+      }
+    </style>
     <title>Apartments Listings</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loading"></div>
+    </div>
   </body>
 </html>
