--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         display: inline-block;
         width: 50px;
         height: 50px;
-        border: 4px solid rgb(1, 100, 80, .3);
+        border: 4px solid rgb(1, 100, 80);
         border-radius: 50%;
         border-top-color: rgba(1, 100, 80, .5);
         animation: spin 1s ease-in-out infinite;
